--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,17 +1,19 @@
-# pull official base image
 FROM python:3.8
 
-# set work directory
 WORKDIR /usr/src/app
 
-# set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# install dependencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt /usr/src/app/requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install -r  /usr/src/app/requirements.txt
 
-# copy project
+
+
 COPY . /usr/src/app/
+COPY ./entrypoint.sh entrypoint.sh
+RUN chmod +x  entrypoint.sh
+
+# run entrypoint.sh
+# ENTRYPOINT ["bash", "entrypoint.sh"]
