--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: '3.7'
 services:
   web:
     build: ./app
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000 
     volumes:
-      - ./app/:/app/
+      - ./app:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
