entypoint.sh fix

--- a/app/dockerfile
+++ b/app/dockerfile
@@ -9,11 +9,11 @@ RUN pip install --upgrade pip
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r  /usr/src/app/requirements.txt
 
-
+COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
 
 COPY . /usr/src/app/
-COPY ./entrypoint.sh entrypoint.sh
-RUN chmod +x  entrypoint.sh
+
+RUN chmod +x /usr/src/app/entrypoint.sh
 
 # run entrypoint.sh
-# ENTRYPOINT ["bash", "entrypoint.sh"]
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
