--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,5 @@
 Django==3.0.6
-psycopg2==2.8.5
+psycopg2-binary==2.8.5
 beautifulsoup4==4.9.1
 requests==2.7.0
 lxml==4.5.0
@@ -7,4 +7,5 @@ pandas==1.0.3
 numpy==1.18.4
 pymorphy2==0.8
 pymorphy2-dicts==2.4.393442.3710985
-sklearn=0.23.1
+sklearn
+markdown==3.2.1 
