--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,4 +8,5 @@ numpy==1.18.4
 pymorphy2==0.8
 pymorphy2-dicts==2.4.393442.3710985
 sklearn
-markdown==3.2.1 
+markdown==3.2.1
+twitter-scraper==0.4.2
