--- a/app/dockerfile.prod
+++ b/app/dockerfile.prod
@@ -56,4 +56,5 @@ RUN chown -R app:app $APP_HOME
 USER app
 
 # run entrypoint.prod.sh
-ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
+# ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
+ENTRYPOINT ["sh", "/home/app/web/entrypoint.prod.sh"]
